[project]
name = "ragproductionapp"
version = "0.1.0"
description = "Production RAG app with Inngest workflow orchestration"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastembed>=0.4.0",
    "fastapi>=0.135.2",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.19",
    "llama-index-readers-file>=0.6.0",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.32.0",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]
